--- a/docs/template/使用方法.md
+++ b/docs/template/使用方法.md
@@ -1,6 +1,6 @@
-# 使用手册
+# 如何新建模块
 
-> 本文档记录使用操作指南，文档中的template是指目录docs/template
+## 使用方法
 
 ### 1.template文件目录结构
 
@@ -46,14 +46,10 @@
 
 ​     修改根目录下的`_navbar.md`文件，指定路径
 
-```markdown
+```
 * 大数据
   * [Flume](/docs/Flume/index.md)
   * [Kafka](/docs/Kafka/index.md)
 ```
 
 将`Flume`指定到`/docs/Flume/index.md`路径
-
-### 6.部署到githup
-
-将本docsify代码提交到githup，
