--- a/docs/大数据/Flume/Flume-ng基本使用/003.案例_tail采集本地文件数据到HDFS.md
+++ b/docs/大数据/Flume/Flume-ng基本使用/003.案例_tail采集本地文件数据到HDFS.md
@@ -1,4 +1,4 @@
-# Flume-ng使用（二） 利用tail -F 来实时采集最新数据到HDFS
+# 003.案例_tail采集本地文件数据到HDFS
 
 ## 1.编辑配置文件
 
@@ -282,7 +282,11 @@ cp ${HADOOP_HOME}share/hadoop/common/lib/hadoop-auth-2.4.0.jar ${FLUME_HOME}/lib
 
 ```
 
+**面试题：请将一下本地数据监控中的tail -F、spooldir 、Taildir的区别。**
 
+- tail -F的方式默认是从第10行开始，如果agent挂掉了，会造成数据的丢失，不能保证数据不丢失。
+- spooldir能够保证数据不丢失，而且能够实现断点续传，但是延迟较高，不能实时监控
+- Taildir能够保证数据不丢失，而且能够实现断点续传，但是延迟较高，还能够进行实时监控
 
 
 
