--- a/docs/其他/004.内网穿透frp.md
+++ b/docs/其他/004.内网穿透frp.md
@@ -149,3 +149,96 @@ custom_domains = rep.gzstrong.cn
 
   输入`服务的ip地址:61001`即可访问到内网服务器的`192.168.197.223:3389`端口
 
+## 四.frps服务端windows隐藏安装启动
+
+> 可以直接下载939598604QQ的微盘里的windows免安装版
+
+###1.内网穿透环境的准备
+
+- 必须准备一台公网的服务器
+- 公网服务器有域名指定
+- 同时配置在域名中添加一台A记录   * 指向该公网的服务器  原因是为了更好的匹配二级域名
+
+### 2.下载解压frp
+
+在地址：http://diannaobos.iok.la:81/frp/frp-v0.20.0/ 中找到window的版本下载到服务器，放到C:\Windows\system\目录下
+
+frps.ini配置文件如下
+
+```shell
+[common]
+bind_port = 7001
+vhost_http_port = 8080
+dashboard_port = 7500
+#subdomains_host = w.jinhuachen.top
+subdomains_host = chenyeshen.club
+```
+
+### 3.编辑隐藏启动文件
+
+start_server.bat
+
+```
+@echo off 　　
+　　if "%1" == "h" goto begin 
+　　    mshta vbscript:createobject("wscript.shell").run("%~nx0 h",0)(window.close)&&exit 
+　　:begin 
+C:\Windows\system\frp\frps.exe -c C:\Windows\system\frp\frps.ini
+```
+
+### 4.打开防火墙的端口
+
+阿里云安全组设置开放端口 7001，8080，7500，61001-65535
+
+### 5.设置window开机启动
+
+ Windows通过组策略设置开机自启动脚本
+
+在 开始菜单 -> 运行中输入 gpedit.msc 启动本地组策略编辑器，找到
+
+计算机配置-->Windows设置-->脚本（启动/关机）-->启动
+
+在弹出窗口中选择上面的脚本文件，然后确定。
+
+## 五.frps服务端windows隐藏安装启动
+
+### 1.下载解压frp
+
+在地址：http://diannaobos.iok.la:81/frp/frp-v0.20.0/ 中找到window的版本下载到服务器，放到C:\Windows\system\目录下
+
+frpc.ini配置文件如下
+
+```
+[common]
+server_addr = 115.220.10.52
+server_port = 7001
+
+[myremote]
+type = tcp
+local_ip = 192.168.197.223
+local_port = 3389
+remote_port = 61001
+```
+
+### 2.编辑隐藏启动文件
+
+start_client.bat
+
+```
+@echo off 　　
+　　if "%1" == "h" goto begin 
+　　    mshta vbscript:createobject("wscript.shell").run("%~nx0 h",0)(window.close)&&exit 
+　　:begin 
+C:\Windows\system\frp\frpc.exe -c C:\Windows\system\frp\frpc.ini
+```
+
+### 3.设置window开机启动
+
+ Windows通过组策略设置开机自启动脚本
+
+在 开始菜单 -> 运行中输入 gpedit.msc 启动本地组策略编辑器，找到
+
+计算机配置-->Windows设置-->脚本（启动/关机）-->启动
+
+在弹出窗口中选择上面的脚本文件，然后确定。
+
