--- a/docs/大数据/Kafka/Kafka基本使用/004.linux单机安装kafka.md
+++ b/docs/大数据/Kafka/Kafka基本使用/004.linux单机安装kafka.md
@@ -8,7 +8,27 @@ Kafka版本：[**kafka_2.11-2.3.0.tgz**](http://mirrors.tuna.tsinghua.edu.cn/apa
 
 （这里不再描述） 
 
-## 3.配置kafka
+
+
+## 3.安装单机版zookeerper
+
+（1）上传zookeeper的安装包到  /soft路径    
+
+（2）解压安装包   tar -zxvf  zookeeper-3.4.10.tar.gz    
+
+（3）进入到conf的文件夹中 ,复制 zoo_sample.cfg为zoo.cfg    
+
+​        cp zoo_sample.cfg  zoo.cfg    
+
+（4）启动    
+
+​        ./zkServer.sh start
+
+（5）测试    因为是本地的zookeeper,直接用 
+
+​        ./zkCli.sh
+
+## 4.配置kafka
 
 - 将kafka复制到/soft目录下
 
@@ -24,13 +44,24 @@ Kafka版本：[**kafka_2.11-2.3.0.tgz**](http://mirrors.tuna.tsinghua.edu.cn/apa
   cd kafka_2.11-2.3.0
   ```
 
-- 编辑配置文件
-
-  `vim config/server.properties`
+- 修改server.property
 
   ```
-  
+  listeners=PLAINTEXT://kafka.gzstrong.com:9092
   ```
 
-  
+  同时在/etc/hosts下添加域名解析
+
+  ```
+  192.168.197.18  kafka.gzstrong.com
+  ```
+
+- 启动kafka
+
+  进入到kafka目录
+
+  ```
+   bin/kafka-server-start.sh -daemon config/server.properties
+  ```
+
 
