--- a/docs/大数据/Flume/Flume-ng基本使用/002.Flume各组件的配置.md
+++ b/docs/大数据/Flume/Flume-ng基本使用/002.Flume各组件的配置.md
@@ -54,6 +54,33 @@ a1.sources.r1.bind = flume2
 a1.sources.r1.port = 8888
 ```
 
+### 1.6 kafka source
+
+```properties
+a1.sources = r1
+a1.channels = c1
+a1.sinks = k1
+
+a1.sources.r1.type = org.apache.flume.source.kafka.KafkaSource
+a1.sources.r1.channels = channel1
+a1.sources.r1.batchSize = 5000
+a1.sources.r1.batchDurationMillis = 2000
+a1.sources.r1.kafka.bootstrap.servers = kafka.gzstrong.com:9092
+a1.sources.r1.kafka.topics = test
+a1.sources.r1.kafka.consumer.group.id = custom.gid
+
+# channel
+a1.channels.c1.type = memory
+a1.channels.c1.capacity = 10000
+a1.channels.c1.transactionCapacity = 5000
+
+# bind
+a1.sources.r1.channels = c1
+a1.sinks.k1.channel = c1
+
+a1.sinks.k1.type = logger
+```
+
 
 
 ## 2.channel
@@ -248,3 +275,32 @@ a1.sinks.k1.channel = c1
 # k2绑定c1
 a1.sinks.k2.channel = c1
 ```
+### 3.7 kafka sink
+
+```
+a1.sources=r1
+a1.channels=c1
+a1.sinks=k1
+
+a1.sources.r1.type = netcat
+a1.sources.r1.bind = localhost
+a1.sources.r1.port = 44444
+
+# sink
+a1.sinks.k1.type = org.apache.flume.sink.kafka.KafkaSink
+a1.sinks.k1.kafka.bootstrap.servers = kafka.gzstrong.com:9092
+a1.sinks.k1.kafka.topic = test
+a1.sinks.k1.kafka.flumeBatchSize = 20 
+a1.sinks.k1.kafka.producer.acks = 1
+a1.sinks.k1.kafka.producer.linger.ms = 1
+
+# channel
+a1.channels.c1.type = memory
+a1.channels.c1.capacity = 1000
+a1.channels.c1.transactionCapacity = 100
+
+# bind
+a1.sources.r1.channels = c1
+a1.sinks.k1.channel = c1
+```
+
